--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
     "@react-navigation/stack": "^6.4.1",
     "cashwise": "file:",
     "expo": "~51.0.28",
+    "expo-splash-screen": "~0.27.6",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "^3.31.1",
-    "react-native-vector-icons": "^10.2.0",
-    "expo-splash-screen": "~0.27.6"
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
